--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             display: flex;
             flex-direction: row;
             gap: 2vh;
-            width: 90vw;
-            max-width: 1200px;
-            max-height: 100vh;
+            width: 95vw;
+            max-height: 95vh;
         }
         @media screen and (max-width: 700px) {
             .frame-container {
@@ -71,13 +70,13 @@
             ondragover="event.preventDefault()" ondrop="dropVideo(event, this)">
             <input type="file" class="file-input" accept="video/*" onchange="displayVideo(this)">
             <video class="video" controls draggable="true" ondragstart="dragStart(event)" ondragend="dragEnd(event, this)"></video>
-            <span class="placeholder">Click or Drop to upload video</span>
+            <span class="placeholder">Click or drag and drop to upload video</span>
         </div>
         <div class="frame" onclick="uploadVideo(this)" ontouchstart="touchStart(event)" ontouchend="touchEnd(event)"
             ondragover="event.preventDefault()" ondrop="dropVideo(event, this)">
             <input type="file" class="file-input" accept="video/*" onchange="displayVideo(this)">
             <video class="video" controls draggable="true" ondragstart="dragStart(event)" ondragend="dragEnd(event, this)"></video>
-            <span class="placeholder">Click or Drop to upload video</span>
+            <span class="placeholder">Click or drag and drop to upload video</span>
         </div>
     </div>
 
@@ -130,9 +129,9 @@
 
         function touchEnd(event) {
             const touchEndX = event.changedTouches[0].screenX;
-            if (touchStartX - touchEndX > 50) {
+            if (touchStartX - touchEndX > 40) {
                 // Swiped left
-            } else if (touchEndX - touchStartX > 50) {
+            } else if (touchEndX - touchStartX > 40) {
                 // Swiped right
                 const frame = event.target.closest('.frame');
                 deleteVideo(frame);
